--- a/index.Rmd
+++ b/index.Rmd
@@ -32,15 +32,15 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 **Instructor:** Mateo Robbins (mjrobbins\@ucsb.edu)
 
--   **Student hours:** Thursday 10:45-11:45pm (Location: Bren 1424)
+-   **Student hours:**
 
-**Teaching assistant:** Allie Caughman (acaughman\@bren.ucsb.edu)
+**Teaching assistant:**
 
--   **Student hours:** Tuesday 3:00-4:00pm (Location: Bren 3526)
+-   **Student hours:**
 
 ## Important links
 
--   [Link to full course syllabus](https://docs.google.com/document/d/1VYZQ6cZq4jL8bdFtronp3Qf1BgTOBpXD2BIG5OSK7eM/edit?usp=sharing)
+-   Link to full course syllabus
 
 ## Weekly course schedule
 
@@ -48,15 +48,11 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 -   **Section:**
 
-    -   First 5 weeks: Th 2:00pm - 2:50pm, 3:00 - 3:50pm
-
-    -   2/15 and onward: Th 12:30 - 1:20pm, 1:30 - 2:20pm
-
 ## Learning objectives
 
 The goal of EDS 232 is to equip students with a strong foundation in the core concepts of machine learning. By the end of the course, students should be able to: 
 
--   Build machine learning models in R using popular machine learning packages
+-   Build machine learning models in Python using popular machine learning packages
 
 -   Build and train supervised machine learning models for prediction and binary classification tasks, including linear and logistic regression.
 
@@ -72,28 +68,22 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 
 -   [**Minimum MEDS device requirements**](https://ucsb-meds.github.io/computer_reqs.html)
 
--   `R` version 4.0.2 (or higher)
-
--   RStudio version 1.4.1103 (or higher)
-
 ### Textbook
-
-[*Hands-On Machine Learning with R*](https://bradleyboehmke.github.io/HOML/), by Bradley Boehmke and Brandon Greenwell
 
 ### 
 
 ## Tentative topics
 
-|         |            |                                                                |                                    |
-|---------|------------|----------------------------------------------------------------|------------------------------------|
-| Week \# | Dates      | Lecture                                                        | Lab                                |
-| 1       | 1/9, 1/11  | Introduction, Linear Regression and ML Modeling Fundamentals I | 1.Regression I (Pumpkins)          |
-| 2       | 1/16, 1/18 | Regularized Regression and ML Modeling Fundamentals II         | 2.Regression II (Pumpkins)         |
-| 3       | 1/23, 1/25 | Logistic Regression, Classification                            | 3.Regularized Regression (Abalone) |
-| 4       | 1/30, 2/1  | K-nearest neighbors, Decision Trees                            | 4.Classification (Wildfire)        |
-| 5       | 2/6, 2/8   | Ethics and Bias in ML                                          | 5.Classification (Spotify)         |
-| 6       | 2/13, 2/15 | Bagging, Random Forest                                         | 5.Classification (Spotify)         |
-| 7       | 2/20, 2/22 | Gradient Boosting                                              | 6.Boosting                         |
-| 8       | 2/27, 3/1  | Clustering                                                     | 7.Clustering                       |
-| 9       | 3/6, 3/8   | Support Vector Machines                                        | 8.SVM                              |
-| 10      | 3/13, 3/15 | Deep Learning, CalCOFI                                         | 9.Kaggle                           |
+|         |       |          |     |
+|---------|-------|----------|-----|
+| Week \# | Dates | Lecture  | Lab |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
+|         |       |          |     |
